# aram_champ_select_helper

./: Cargo.toml  LICENSE  README.md  architecture.puml  build.py  docker-compose.yml  filter.json
AI/: ai.py  ai_test.py  model
Crawler/: .gitignore  crawler.py  lol_client.py
Interface/: .gitignore  lol_client_interface.py
client/: .gitignore  Cargo.toml  build.rs
client/manual-tests/: test-client.rs
client/src/: _lib.rs  gui.rs  lib.rs  lol_client_api.rs  main.rs  simulator.rs
client/src/models/: aram.rs  mod.rs
data-collection/: Cargo.toml  Dockerfile
data-collection/src/: lib.rs  main.rs  summoners.rs  utils.rs
model-trainer/: .gitignore  Cargo.toml  Dockerfile  champs.json  model.onnx
model-trainer/src/: ai.py  aram_champ_select_ai.py  main.rs
poc_interface/: lol_client_interface.py
