[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract-onnx = "0.15.8"
dioxus = {features = ["desktop"], git = "https://github.com/DioxusLabs/dioxus", branch = "master"}
serde_json = "1.0.79"
league-client-connector = "0.1.2"
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["json"] }
lazy_static = "1.4.0"
clap = { version = "3.1.8", features = ["derive"] }
async-trait = "0.1.53"
anyhow = "1.0.57"

[build-dependencies]
serde_json = "1.0.79"
reqwest = { version = "0.11.9", features = ["blocking"] }
tokio = { version = "1.13.0", features = [] }

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "test-client"
path = "manual-tests/test-client.rs"