[package]
name = "data-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riven = "2.7.1"
log = "0.4.14"
tokio = { version = "1.13.0", features = ["full"] }
mongodb = "2.2.2"
serde = "1.0.128"
futures-core = "0.3.21"
futures = "0.3.21"