[package]
name = "model-trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.6.1"
tokio = { version = "1.13.0", features = ["full"] }
mongodb = "2.1.0"
data-collection = { path = "../data-collection" }
futures-core = "0.3.21"
futures = "0.3.21"
itertools = "0.10.3"
riven = "2.6.0"
rand = "0.8.5"
neuroflow = "0.1.3"